spreadsheet pulls from firebase

--- a/gh-web-app/package.json
+++ b/gh-web-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@handsontable-pro/react": "^2.0.0",
+    "@handsontable/react": "^2.0.0",
+    "handsontable": "^6.0.1",
+    "handsontable-pro": "^6.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
@@ -21,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "firebase": "^5.5.4"
+  }
 }
