--- a/gh-web-app/public/manifest.json
+++ b/gh-web-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SLafety Net",
-  "name": "SLafety Net Service Provider Portal",
+  "short_name": "Samaritan",
+  "name": "Samaritan: Immigrant Service Provider Portal",
   "icons": [
     {
       "src": "favicon.ico",
